test/fail_compilation/imports/fail357c.d
module inports.fail357c;

struct Foo
{
}
